# nix-container-build-gha

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: build-and-deploy.yaml
scripts/: build_and_push_image.sh
src/: app.py
